--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html>
+
+<head>
     <title>Hangman Game</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-   
-    <body>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+</head>
+
+
+<body>
+
+    <div class="container">
         <h1>Hangman Game</h1>
+        <h4 class="win">Wins: 0</h4>
+        <h4 class="fail">Losses: 0</h4>
         <div>
             <!-- <h5>Press any key to begin</h5> -->
         </div>
-        <button id="start">Start Game</button>
-        <div id="current-word">The word</div>
-        <div id="guesses">Guesses: </div>
+        <button type="button" class="btn btn-success" id="start">Start Game</button>
+        <div id="current-word">The word: </div>
+        <div id="guesses">Number of Guesses: </div>
         <div id="user-guess">Letters Guessed: </div>
-       
-        <script src="js/game.js"></script>
-    </body>
-    
+        <div id="correct-word"></div>
+        <div id='wordBank'>Word Bank: bud, miller, corona, guiness, heineken, stella, sol, modelo, asahi</div>
+    </div>
+
+
+
+    <script src="js/game.js"></script>
+    <script src="js/frontEnd.js"></script>
+</body>
+
 </html>
 
 <!-- onclick= "myFunction()" -->
